# SheetProof

./: .gitignore  README.md  pyproject.toml  sheetproof.yml
.github/workflows/: evals.yml
docs/: architecture.md  competitive-landscape.md  harness_compliance.md  performance_slo.md  reliability.md  report_schema.md  risk_scoring.md  unsupported_features.md
docs/decisions/: 0001-deterministic-first.md  2026-05-18-constrained-output-engine.md  README.md
evals/: README.md  promptfooconfig.yaml
evals/datasets/: README.md  explain_schema_cases.json
evals/promptfoo/: provider.py
evals/results/: README.md  audit_benchmark_baseline.json  audit_benchmark_large_baseline.json  audit_benchmark_medium_baseline.json  audit_benchmark_small_baseline.json
evals/rubrics/: README.md  explain_schema_rubric.json
examples/: benchmark_large.xlsx  benchmark_medium.xlsx  benchmark_small.xlsx
scripts/: benchmark_audit.py
src/sheetproof/: __init__.py  benchmark.py  cli.py  evals.py  gate.py  observability.py  policy.py  ragas_eval.py  reproducibility.py
tests/integration/: test_reproducibility_subprocess.py
tests/unit/: test_a1_orchestration.py  test_a2_eval_explain.py  test_a3_structured_explain.py  test_benchmark_audit.py  test_cli.py  test_explain.py  test_formula_and_graph.py  test_hosted_providers.py  test_l4_observability_config.py  test_l4_observability_trace.py  test_l5_instructor_runtime.py  test_l6_ragas_optional.py  test_lineage_evidence.py  test_p5_integrations.py  test_p6_reliability_report.py  test_provider_hardening.py  test_repro_diff_ordering.py  (+9 more)
(+35 files in other folders)
