[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheetproof"
version = "0.1.0"
description = "Local-first spreadsheet audit and validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "langgraph>=0.2.0",
  "litellm>=1.74.0",
  "instructor[litellm]>=1.11.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.scripts]
sheetproof = "sheetproof.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
